--- a/index.html
+++ b/index.html
@@ -35,7 +35,14 @@
 
         <div class="navbar__s3">
             <p> Courses</p>
+            <!-- My Learning-->
+           <div class="mylearning">
             <p> My Learning</p>
+            <div class="mylearning__popup">
+                <p>You did not purchase anything yet</p>
+
+            </div>
+           </div>
             <i class="fa-solid fa-cart-shopping" style="color:#000000;"></i>
             <i class="fa-solid fa-bell" style="color: #000000;"></i>
             <i class="fa-solid fa-user" style="color: #000000;"></i>
@@ -59,6 +66,12 @@
 
     <div class="sale-image">
         <img src="image/sale-img.jpg" alt="">
+        <div class="sale-image__offer">
+            <h2>Udemy Flash Sale 24 hours to Save.</h2>
+            <p>Get the top Courses for just 499.Just one day to save but a 
+                lifetime to learn
+            </p>
+        </div>
 
 
     </div>
