updated media Queries

--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
 
         </div>
 
+        <div class="navbar__s4">
+            <i class="fa-solid fa-bars"></i>
+
+        </div>
+
     </div>
 
 
